--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "date-fns": "^2.10.0",
+    "material-ui-phone-number": "^2.2.5",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
     "react": "^16.13.0",
