--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "date-fns": "^2.10.0",
-    "material-ui-phone-number": "^2.2.5",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-phone-input-mui": "^2.9.4",
     "react-scripts": "3.4.0",
     "typeface-alata": "^1.1.3",
     "typeface-roboto": "0.0.75"
